MAJOR CSS FIXES Fixed jquery slider horizontal style Fixed label alignment

--- a/IPython/html/static/notebook/less/widgetarea.less
+++ b/IPython/html/static/notebook/less/widgetarea.less
@@ -1,23 +1,79 @@
-.widget-label {
-    min-width: 300px;
-}
 
-div.widget-container {
-    .box-flex2();
-    .border-box-sizing();
-}
-
-div.widget-area {
+.widget-area {
     page-break-inside: avoid;
     .hbox();
-}
 
-/* This class is for the widget subarea inside the widget_area and after
-   the prompt div. */
-div.widget-subarea {
-    padding: 0.44em 0.4em 0.4em 1px;
-    margin-left: 6px;
-    .border-box-sizing();
-    .vbox();
-    .box-flex2()
+    .widget-subarea {
+        padding: 0.44em 0.4em 0.4em 1px;
+        margin-left: 6px;
+        .border-box-sizing();
+        .vbox();
+        .box-flex2();
+
+        .widget-label {
+            min-width: 10ex;
+            padding-right: 8px;
+            text-align: right;
+            vertical-align: text-top;
+            padding-top: 3px;
+        }
+
+        .widget-slider {
+            padding-left: 8px;
+            padding-right: 5px;
+            margin-top: 11px;
+
+            width: 348px;
+            height: 5px !important;
+            overflow: visible !important;
+
+            border: 1px solid #CCCCCC;
+            background: #FFFFFF;
+            .corner-all();
+
+            .ui-slider {
+                border: 0px !important;
+                background: none !important;
+
+                .ui-slider-handle {
+                    width: 14px !important;
+                    height: 28px !important;
+
+                    margin-top: -7px !important;
+                }
+            }
+        }
+
+        .widget-text {
+            width: 350px;
+            margin-bottom: 0px;
+        }
+
+        .widget-numeric-text {
+            width: 150px;
+        }
+
+        .widget-combo-btn {
+            min-width: 138px; /* + 26px drop arrow btn = 164px */
+            height: 30px;
+        }
+
+        .widget-container {
+            .box-flex1();
+            .border-box-sizing();
+        }
+
+        .widget-hbox {
+            .hbox();
+            .start();
+            .widget-container();
+            margin-bottom: 5px;
+            margin-top: 5px;
+        }
+
+        .widget-hbox-single {
+            .widget-hbox();
+            height: 30px;
+        }
+    }
 }
